--- a/index.prod.html
+++ b/index.prod.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -7,13 +6,15 @@
 <title>Fretes</title>
 <script>
   // CONFIGURAÇÃO DE AMBIENTE - PRODUÇÃO
-  // Este arquivo é usado quando rodando via Docker.
+  // O Nginx vai rotear todas as chamadas que começam com '/api' para o container da API.
   window.APP_CONFIG = {
     mode: 'api',
-    apiUrl: 'http://fretes-api:3000' // URL interna do Docker ou Proxy
+    apiUrl: '/api' 
   };
+  console.log('[ENV] Produção Docker carregado. API apontando para: /api');
 </script>
-<link href="/dist/output.css?v=prod-final-v4" rel="stylesheet">
+<!-- Adicionado parametro de versao para evitar cache antigo do navegador -->
+<link href="/dist/output.css?v=docker-fix-1" rel="stylesheet">
 <style>
 /* Custom scrollbar for better aesthetics */
 ::-webkit-scrollbar {
@@ -34,6 +35,6 @@
 </head>
 <body class="bg-slate-900 text-slate-100">
 <div id="root"></div>
-<script type="module" src="/dist/bundle.js?v=prod-final-v4"></script>
+<script type="module" src="/dist/bundle.js?v=docker-fix-1"></script>
 </body>
 </html>
