feat: Dynamic favicon and page title
Implement dynamic favicon based on system configuration.
Update the application title to "Frete360" in the production HTML file.
Adjust version number in App.tsx.

--- a/index.prod.html
+++ b/index.prod.html
@@ -6,7 +6,8 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
-<title>Fretes</title>
+<link rel="icon" type="image/svg+xml" href="/favicon.svg?v=3" />
+<title>Frete360</title>
 <script>
   // CONFIGURAÇÃO EXPLÍCITA DE AMBIENTE DE PRODUÇÃO
   window.__FRETE_MODO_MOCK__ = false;
